# ubuntu-rtsp-ffmpeg

./: .gitignore  CMakeCache.txt  CMakeLists.txt  FF_SDL2_visual.cpp  Makefile  Makefile1  README.md  SDL2_visual.cpp  ansion.cpp  cmake_install.cmake  copy.cpp  encodejpg_writefile.cpp  nojrplib.cpp  onlyrtsp.cpp  output.yuv  test_packet_recv.h264  view.cpp
myRtspClient/: CMakeCache.txt  Makefile  cmake_install.cmake  myRtpTcpSession.cpp  rtspClient.cpp  sdp_data.cpp
myRtspClient/include/: myRtpSession.h
myRtspClient/jrtplib/: Makefile  cmake_install.cmake
myRtspClient/jrtplib/src/: Makefile  cmake_install.cmake  libjrtp.so.3.11.1
src/: complete_example.cpp  jlib_SDL1_visual.cpp  jlib_SDL2_visual.cpp
